[package]
name = "norrland"
description = "Utility macro for implementing traits on SQLx types"
version = "0.0.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/jonaro00/norrland"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
testcontainers-modules = { version = "0.14", default-features = false, features = [
    "postgres",
] }
tracing-subscriber = "0.3"
tracing = "0.1"
